Version 0.5.1
--------------
Bugfix: 'Enable Context Menu' option was not working.

Version 0.5.0
--------------
Feature: "Send link to SABnzbd" link added to chrome context menu for http links. Note that this feature is not intended to be used on links that will require authentication.
Feature: New setting in options page to enable/disable the new context menu.
Feature: Added support for fanzub
Feature: Completely redesigned Options page
Change: Removed newzleech support since that website is down.
Change: Extreme architecture change that fixes many bugs and improves stability.
Bugfix: Fixed continuous memory leaks happening during refreshes.
Bugfix: SabConnect++ no longer crashes after a period of time.
Bugfix: Several script errors eliminated and stability improved.

Version 0.4.12
--------------
New feature: Added 1-click NZB download for fanzub.com
Improvement: Allow 1, 2 or 4 hours refresh rates, or disabling background refresh altogether
Bugfix: fixing 1-click for nzbclub.com
Bugfix: Missing 1-click downloads on binsearch.info Watchlist
Bugfix: AJAX search results on nzbsrus.com didn't show the 1-click SAB icons

Version 0.4.11
--------------
Bugfix: Now working in Chrome 12 (dev)

Version 0.4.10
--------------
New feature: Added 1-click NZB download for nzb.su (Newznab).
  Note: SABconnect++ won't send a category when using cover view. This is because those views don't display the categories.

Version 0.4.9
-------------
Improvement: Timeout for notifications (to disappear) is now configurable. Default is to keep them open indefinitely.
Improvement: Allow you to use the X-DNZB-Category HTTP header on sites that supports it (nzbs.org, Newzbin), instead of using the default auto-categorization. The X-DNZB-Category header will only contain the main category (eg. 'TV'), versus auto-categorization that will contain the full category name (eg. TV.x264) http://code.google.com/p/sabconnectplusplus/issues/detail?id=18